code/human_written_tests/WebAssembly/processed_control_flow_validation/test_loop_27.wast
(assert_invalid
  (module (func $type-value-unreached-select (result i32)
    (loop (result i64) (select (unreachable) (unreachable) (unreachable)))
  ))
  "type mismatch"
)